--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <section id="home">
         <div class="section_text">
           <p class="section_text_p">Hello, I'm</p>
-          <h1 class="title_p1">Onyiriuka Justin</h1>
+          <h1 class="title_p1 name_1">Onyiriuka Justin</h1>
           <div class="change-text">
             <h3>
               I am a
@@ -182,7 +182,7 @@
         </div>
         <i
           class="bx bx-chevrons-down icon arrow"
-          onclick="window.location.href = '#projects'"
+          onclick="window.location.href = '#experience'"
         ></i>
       </section>
 
@@ -297,7 +297,7 @@
                 <div class="details-containers color-container slide">
                   <div class="article-container">
                     <img
-                      src="./assets/project_1.png"
+                      src="./assets/portfolio_photo.png"
                       alt="1st project"
                       class="project-img"
                     />
@@ -314,14 +314,12 @@
                 <div class="details-containers color-container slide">
                   <div class="article-container">
                     <img
-                      src="./assets/project_1.png"
+                      src="./assets/ecommerce_photo.png"
                       alt="1st project"
                       class="project-img"
                     />
                   </div>
-                  <h2 class="experience-sub-title project-title">
-                    My portfolio
-                  </h2>
+                  <h2 class="experience-sub-title project-title">E-commerce</h2>
                   <div class="btn-container project-btn">
                     <button class="btn">Github</button>
                     <button class="btn">Live Demo</button>
@@ -330,14 +328,12 @@
                 <div class="details-containers color-container slide">
                   <div class="article-container">
                     <img
-                      src="./assets/project_1.png"
+                      src="./assets/dice_project.png"
                       alt="1st project"
                       class="project-img"
                     />
                   </div>
-                  <h2 class="experience-sub-title project-title">
-                    My portfolio
-                  </h2>
+                  <h2 class="experience-sub-title project-title">Dice Game</h2>
                   <div class="btn-container project-btn">
                     <button class="btn">Github</button>
                     <button class="btn">Live Demo</button>
@@ -347,13 +343,45 @@
                 <div class="details-containers color-container slide">
                   <div class="article-container project-btn">
                     <img
-                      src="./assets/project_1.png"
+                      src="./assets/weather_project.png"
                       alt="1st project"
                       class="project-img"
                     />
                   </div>
                   <h2 class="experience-sub-title project-title">
-                    My portfolio
+                    Weather App
+                  </h2>
+                  <div class="btn-container project-btn">
+                    <button class="btn">Github</button>
+                    <button class="btn" disabled>Live Demo</button>
+                  </div>
+                </div>
+                <div class="details-containers color-container slide">
+                  <div class="article-container project-btn">
+                    <img
+                      src="./assets/image_searcher.png"
+                      alt="1st project"
+                      class="project-img"
+                    />
+                  </div>
+                  <h2 class="experience-sub-title project-title">
+                    Image Searcher
+                  </h2>
+                  <div class="btn-container project-btn">
+                    <button class="btn">Github</button>
+                    <button class="btn">Live Demo</button>
+                  </div>
+                </div>
+                <div class="details-containers color-container slide">
+                  <div class="article-container project-btn">
+                    <img
+                      src="./assets/file_downloader.png"
+                      alt="1st project"
+                      class="project-img"
+                    />
+                  </div>
+                  <h2 class="experience-sub-title project-title">
+                    File Downloader
                   </h2>
                   <div class="btn-container project-btn">
                     <button class="btn">Github</button>
@@ -404,7 +432,7 @@
                 </div>
                 <div class="input-box input">
                   <div class="input-section">
-                    <input type="text" name="lastName" required/>
+                    <input type="text" name="lastName" required />
                     <label for="lastName">Last name</label>
                   </div>
                   <i class="bx bxs-id-card contact-icon"></i>
@@ -475,6 +503,8 @@
         <p>&COPY; Copyright 2024 Justinedoc. All Rights Reserved</p>
       </footer>
     </div>
+    <script src="src/scroll.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
     <script src="./src/main.js"></script>
   </body>
 </html>
