--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+    
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/mediaQueries.css" />
     <link
@@ -30,7 +31,12 @@
             <li><a href="#contact" class="links">Contact</a></li>
 
             <div class="btn-container">
-              <button class="btn normal" onclick="window.location.href='#contact'">Hire Me</button>
+              <button
+                class="btn normal"
+                onclick="window.location.href='#contact'"
+              >
+                Hire Me
+              </button>
             </div>
             <span class="toggle_icon"><i class="bx bx-moon moon"></i></span>
           </ul>
@@ -86,16 +92,23 @@
             </button>
 
             <div class="social-icons">
-              <a href="#"><i class="bx bxl-facebook" style="--order: 1"></i></a>
-              <a href="#"><i class="bx bxl-github" style="--order: 2"></i></a>
-              <a href="#"><i class="bx bxl-twitter" style="--order: 3"></i></a>
-              <a href="#"><i class="bx bxl-whatsapp" style="--order: 4"></i></a>
+              <a href="https://github.com/justinedoc"
+                ><i class="bx bxl-github"></i
+              ></a>
+              <a
+                href="https://www.linkedin.com/in/onyiriuka-justin-a341a02a4?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                ><i class="bx bxl-linkedin"></i
+              ></a>
+              <a href="#"><i class="bx bxl-facebook"></i></a>
+              <a href="https://wa.me/qr/JZX2DTDBOPPWP1"
+                ><i class="bx bxl-whatsapp"></i
+              ></a>
             </div>
           </div>
         </div>
 
         <div class="section_pic_container">
-          <img src="./assets/profile.png" alt="Justin's Profile Picture" />
+          <img src="./assets/profile.png" alt="Profile Picture" />
           <div class="liquid-shape">
             <svg
               viewBox="0 0 500 500"
@@ -138,7 +151,7 @@
           <div class="section_pic_container">
             <img
               src="./assets/about-pic.png"
-              alt="profile picture"
+              alt="about picture"
               class="about-pic"
             />
           </div>
@@ -224,7 +237,7 @@
                   <i class="bx bxs-badge-check" class="icon"></i>
                   <div>
                     <h3>SASS</h3>
-                    <p>Experienced</p>
+                    <p>Basic</p>
                   </div>
                 </article>
 
