fixing bugs on email js implementation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    
+
+    <link rel="shortcut icon" href="./assets/HeadLogo.png" type="image/x-icon" class="fav__icon">
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/mediaQueries.css" />
     <link
@@ -552,7 +553,12 @@
             <div class="contact-info-container">
               <i class="bx bxl-linkedin"></i>
               <p>
-                <li><a href="https://www.linkedin.com">Linkedin</a></li>
+                <li>
+                  <a
+                    href="https://www.linkedin.com/in/onyiriuka-justin-a341a02a4?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                    >Linkedin</a
+                  >
+                </li>
               </p>
             </div>
           </div>
@@ -575,7 +581,7 @@
             </ul>
           </div>
         </nav>
-        <p>&COPY; Copyright 2024 Justinedoc. All Rights Reserved</p>
+        <p>&COPY; 2024 Justinedoc.</p>
       </footer>
     </div>
     <script src="src/scroll.js"></script>
