fixing style issues

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
 
-    <link rel="shortcut icon" href="./assets/HeadLogo.png" type="image/x-icon" class="fav__icon">
+    <link
+      rel="shortcut icon"
+      href="./assets/HeadLogo.png"
+      type="image/x-icon"
+      class="fav__icon"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/mediaQueries.css" />
     <link
@@ -581,7 +586,9 @@
             </ul>
           </div>
         </nav>
-        <p>&COPY; 2024 Justinedoc.</p>
+        <p>
+          &COPY; 2024 <a href="https://github.com/justinedoc">Justinedoc.</a>
+        </p>
       </footer>
     </div>
     <script src="src/scroll.js"></script>
