resume download on button click implemented

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </p>
 
           <div class="btn-container">
-            <button class="btn btn-color-2 download_cv">
+            <button class="btn btn-color-2 download_cv" onclick="getResume()">
               <span>Download CV</span><i class="bx bx-download"></i>
             </button>
 
