adding codes for preloader functionality

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     />
   </head>
   <body>
+    <div class="preloader">
+      <div class="blocks">
+        <div class="block"></div>
+        <div class="block"></div>
+        <div class="block"></div>
+      </div>
+      <p class="preloader__text">...Loading</p>
+    </div>
+
     <div class="container active" id="light-mode">
       <nav id="desktop-nav">
         <div class="logo">Justin<span style="color: #12f7ff">.</span></div>
@@ -77,7 +86,7 @@
           <h1 class="title_p1 name_1">Onyiriuka Justin</h1>
           <div class="change-text">
             <h3>
-              I am a
+              A
               <span
                 class="txt-rotate"
                 data-period="2000"
