--- a/index.html
+++ b/index.html
@@ -2,8 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+    <meta
+      name="description"
+      content="Explore my portfolio as a skilled front-end and javascript developer. Veiw projects, skills, and contact information."
+    />
+    <meta
+      name="keywords"
+      content="Justin, portfolio, front-end developer, Javascript, web development, projects, onyiriuka, justinedoc, justinifeanyi, justin_edoc"
+    />
+    <meta name="author" content="Justin" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:title" content="My Portfolio" />
+    <meta
+      property="og:description"
+      content="Explore my portfolio as a skilled front-end and javascript developer."
+    />
+    <meta
+      property="og:image"
+      content="https://justinedoc.vercel.app/assets/meta_img.jpg'"
+    />
+    <meta property="og:url" content="https://justinedoc.vercel.app/" />
+    <meta property="og:type" content="website" />
 
     <link
       rel="shortcut icon"
