configuring meta tags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- metatags -->
     <meta charset="UTF-8" />
     <title>My Portfolio</title>
     <meta
@@ -14,18 +15,19 @@
     <meta name="author" content="Justin" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:title" content="My Portfolio" />
+    <meta property="og:title" content="my portfolio" />
     <meta
       property="og:description"
       content="Explore my portfolio as a skilled front-end and javascript developer."
     />
     <meta
       property="og:image"
-      content="https://justinedoc.vercel.app/assets/meta_img.jpg'"
+      content="https://justinedoc.vercel.app/assets/meta_img.png'"
     />
-    <meta property="og:url" content="https://justinedoc.vercel.app/" />
+    <meta property="og:url" content="https://justinedoc.vercel.app" />
     <meta property="og:type" content="website" />
 
+    <!-- links -->
     <link
       rel="shortcut icon"
       href="./assets/HeadLogo.png"
