--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <meta
       property="og:image"
-      content="https://justinedoc.vercel.app/assets/meta_img.png'"
+      content="https://justinedoc.vercel.app/assets/profile.png"
     />
     <meta property="og:url" content="https://justinedoc.vercel.app" />
     <meta property="og:type" content="website" />
