finalizing on all files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="author" content="Justin" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:title" content="my portfolio" />
+    <meta property="og:title" content="My Portfolio" />
     <meta
       property="og:description"
       content="Explore my portfolio as a skilled front-end and javascript developer."
@@ -87,14 +87,14 @@
         <div class="mobile-menu">
           <div class="nav-wrapper">
             <span class="toggle_icon"><i class="bx bx-moon moon"></i></span>
-            <div class="mobile-icon" onclick="toggleMenu()">
-              <span></span>
-              <span></span>
-              <span></span>
+            <div class="mobile-icon menu__u" onclick="toggleMenu()">
+              <span class="menu__u"></span>
+              <span class="menu__u"></span>
+              <span class="menu__u"></span>
             </div>
           </div>
 
-          <div class="menu-links">
+          <div class="menu-links menu__u">
             <li><a href="#home" onclick="toggleMenu()">Home</a></li>
             <li><a href="#about" onclick="toggleMenu()">About</a></li>
             <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
@@ -275,7 +275,7 @@
                   <i class="bx bxs-badge-check" class="icon"></i>
                   <div>
                     <h3>SASS</h3>
-                    <p>Basic</p>
+                    <p>Experienced</p>
                   </div>
                 </article>
 
